--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   device_info_plus: ^10.1.1
   hive: ^2.2.3
   carousel_slider: ^5.0.0
+  chucker_flutter: ^1.7.2
 #  http: ^1.2.2
 
 dev_dependencies:
